--- a/SocialMediaWebMVC/SocialMediaWebMVC.csproj
+++ b/SocialMediaWebMVC/SocialMediaWebMVC.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Controllers\NewController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\New\" />
+  </ItemGroup>
+
 </Project>
